--- a/js_lab_final/js_lab_final.html
+++ b/js_lab_final/js_lab_final.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Basic JavaScript Event Handling and DOM</title>
-  <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="js_lab_final/style/style.css">
   <script async src="js/final_script.js"></script>
 </head>
 <body>
